# Voxel-Engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: blocks.json
assets/bioms/: desert.ron  mountain.ron  plains.ron
assets/blocks/: air.ron  bedrock.ron  dirt.ron  grass.ron  gravel.ron  leaves.ron  sand.ron  snow.ron  stone.ron  wood_log.ron
src/: main.rs
src/config/: mod.rs
src/player/: camera.rs  mod.rs  movement.rs
src/states/: mod.rs
src/states/app_loading/: mod.rs
src/states/game/: mod.rs
src/states/game_loading/: mod.rs
src/states/menu/: mod.rs
src/world/: mod.rs  utils.rs
src/world/bioms/: mod.rs
src/world/blocks/: mod.rs
src/world/chunks/: mod.rs
src/world/seeding/: mod.rs
