[package]
name = "Voxel-Engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "3d",
    "ui",
    "dynamic_linking",
    "bevy_core_pipeline"
] }
log = "0.4.29"
noisy_bevy = "0.13.0"
avian3d = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
