[package]
name = "Voxel-Engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = true, features = [
    "dynamic_linking",
    "bevy_dev_tools",
    "multi_threaded"
] }
log = "0.4.29"
noisy_bevy = "0.13.0"
avian3d = { version = "0.5", features = ["collider-from-mesh"] }
bevy_lunex = { version = "0.6.0" }
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
